# bitcoin

./: .editorconfig  .gitattributes  .gitignore  .python-version  .style.yapf  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  COPYING  INSTALL.md  README.md  SECURITY.md  libbitcoinkernel.pc.in  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md  ci-test-each-commit-exec.py
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature_request.yml  good_first_issue.yml  gui_issue.yml
.github/workflows/: ci.yml
.tx/: config
ci/: README.md  lint_imagefile  test_imagefile  test_run_all.sh
ci/lint/: 01_install.sh  06_script.sh  container-entrypoint.sh
ci/retry/: README.md  retry
ci/test/: 00_setup_env.sh  00_setup_env_arm.sh  00_setup_env_i686_no_ipc.sh  00_setup_env_mac_cross.sh  00_setup_env_mac_cross_intel.sh  00_setup_env_mac_native.sh  00_setup_env_mac_native_fuzz.sh  00_setup_env_native_alpine_musl.sh  00_setup_env_native_asan.sh  00_setup_env_native_fuzz.sh  00_setup_env_native_fuzz_with_msan.sh  00_setup_env_native_nowallet_libbitcoinkernel.sh  00_setup_env_native_previous_releases.sh  00_setup_env_native_tidy.sh  00_setup_env_native_tsan.sh  00_setup_env_native_valgrind.sh  00_setup_env_s390x.sh  00_setup_env_win64.sh  01_base_install.sh  02_run_container.py  02_run_container.sh  03_test_script.sh  GetCMakeLogFiles.cmake  wrap-valgrind.sh
cmake/: bitcoin-build-config.h.in  ccache.cmake  crc32c.cmake  introspection.cmake  leveldb.cmake  libmultiprocess.cmake  minisketch.cmake  secp256k1.cmake  windows-app.manifest.in
cmake/module/: AddBoostIfNeeded.cmake  AddWindowsResources.cmake  CheckLinkerSupportsPIE.cmake  CheckSourceCompilesWithFlags.cmake  FindLibevent.cmake  FindQRencode.cmake  FindQt.cmake  FindUSDT.cmake  FindZeroMQ.cmake  FlagsSummary.cmake  GenerateSetupNsi.cmake  GetTargetInterface.cmake  InstallBinaryComponent.cmake  Maintenance.cmake  ProcessConfigurations.cmake  TargetDataSources.cmake  TestAppendRequiredLibraries.cmake  TryAppendCXXFlags.cmake  TryAppendLinkerFlag.cmake  WarnAboutGlobalProperties.cmake
cmake/script/: Coverage.cmake  CoverageFuzz.cmake  CoverageInclude.cmake.in  GenerateBuildInfo.cmake  GenerateHeaderFromJson.cmake  GenerateHeaderFromRaw.cmake  cov_tool_wrapper.sh.in  macos_zip.sh
contrib/: README.md  filter-lcov.py  valgrind.supp
contrib/asmap/: README.md  asmap-tool.py  asmap.py
contrib/debian/: copyright
contrib/devtools/: README.md  check-deps.sh  circular-dependencies.py  clang-format-diff.py  copyright_header.py  gen-bitcoin-conf.sh  gen-manpages.py  headerssync-params.py  split-debug.sh.in  utils.py
contrib/guix/: INSTALL.md  README.md  guix-attest  guix-build  guix-clean  guix-codesign  guix-verify  manifest.scm  security-check.py  symbol-check.py
contrib/init/: README.md  bitcoind.conf  bitcoind.init  bitcoind.openrc  bitcoind.openrcconf  bitcoind.service  org.bitcoin.bitcoind.plist
contrib/linearize/: README.md  example-linearize.cfg  linearize-data.py  linearize-hashes.py
contrib/macdeploy/: README.md  detached-sig-create.sh  gen-sdk  macdeployqtplus
contrib/message-capture/: message-capture-docs.md  message-capture-parser.py
contrib/qos/: README.md  tc.sh
contrib/seeds/: .gitignore  README.md  generate-seeds.py  makeseeds.py  nodes_main.txt  (+3 more)
depends/: .gitignore  Makefile  README.md  config.guess  config.sub  description.md  funcs.mk  gen_id  packages.md  toolchain.cmake.in
doc/: CMakeLists.txt  Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  assumeutxo.md  benchmarking.md  bips.md  bitcoin-conf.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows-msvc.md  build-windows.md  cjdns.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  guix.md  i2p.md  managing-wallets.md  multiprocess.md  multisig-tutorial.md  offline-signing-tutorial.md  p2p-bad-ports.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes-33555.md  release-notes-empty-template.md  (+6 more)
doc/design/: assumeutxo.md  libraries.md  multiprocess.md
doc/man/: bitcoin-cli.1  bitcoin-qt.1  bitcoin-tx.1  bitcoin-util.1  bitcoin-wallet.1  bitcoin.1  bitcoind.1
doc/policy/: README.md  mempool-limits.md  mempool-replacements.md  packages.md
doc/release-notes/: release-notes-0.10.0.md  release-notes-0.10.1.md  release-notes-0.10.2.md  release-notes-0.10.3.md  release-notes-0.10.4.md  release-notes-0.11.0.md  release-notes-0.11.1.md  release-notes-0.11.2.md  release-notes-0.12.0.md  release-notes-0.12.1.md  release-notes-0.13.0.md  release-notes-0.13.1.md  release-notes-0.13.2.md  release-notes-0.14.0.md  release-notes-0.14.1.md  release-notes-0.14.2.md  release-notes-0.14.3.md  release-notes-0.15.0.1.md  release-notes-0.15.0.md  release-notes-0.15.1.md  release-notes-0.15.2.md  release-notes-0.16.0.md  release-notes-0.16.1.md  release-notes-0.16.2.md  release-notes-0.16.3.md  release-notes-0.17.0.1.md  release-notes-0.17.0.md  release-notes-0.17.1.md  release-notes-0.18.0.md  release-notes-0.18.1.md  release-notes-0.19.0.1.md  release-notes-0.19.0.md  release-notes-0.19.1.md  release-notes-0.20.0.md  release-notes-0.20.1.md  release-notes-0.20.2.md  release-notes-0.21.0.md  release-notes-0.21.1.md  release-notes-0.21.2.md  release-notes-0.3.12.md  (+66 more)
share/: setup.nsi.in
src/: coins.cpp  coins.h  validationinterface.h  versionbits.cpp  versionbits.h  versionbits_impl.h  walletinitinterface.h
src/qt/test/: CMakeLists.txt  addressbooktests.cpp  addressbooktests.h  apptests.cpp  apptests.h  optiontests.cpp  optiontests.h  rpcnestedtests.cpp  rpcnestedtests.h  test_main.cpp  uritests.cpp  uritests.h  util.cpp  util.h  wallettests.cpp  wallettests.h
src/test/fuzz/util/: CMakeLists.txt  check_globals.cpp  check_globals.h  mempool.cpp  mempool.h  net.cpp  net.h  wallet.h
src/util/: CMakeLists.txt  any.h  asmap.cpp  batchpriority.cpp  batchpriority.h
test/: CMakeLists.txt  README.md  config.ini.in  get_previous_releases.py
(+1559 files in other folders)
